	into notgame.  It doesn't work yet, and there's still more cleaning up
	to do, but at least the thing compiles and runs now. =)
	
-------------------------------------------------------------------------------
Tue Sep  7 19:20:03 PDT 1999	Michael Jennings <mej@eterm.org>

	More work on the config file parser.  I still have to clean up the
	context switching and the state persistence, but at least it won't
	crash. :-)
	
-------------------------------------------------------------------------------
Tue Sep 14 16:11:39 PDT 1999	Michael Jennings <mej@eterm.org>

	Got the config parser all fleshed out and working, and I made the
	player/player group section work.  We're about 80% of the way to a
	playable, customizable version.

	See notgame.cfg.dist for a sample config file; copy it to your home
	directory as "notgame.cfg" if you wanna play. :)
	
-------------------------------------------------------------------------------
Tue Sep 14 19:16:06 PDT 1999	Michael Jennings <mej@eterm.org>

	Working towards getting the "play game" data from the right places.
	
-------------------------------------------------------------------------------
Thu Sep 16 16:56:20 PDT 1999	Michael Jennings <mej@eterm.org>

	The Not Game is now completely playable.  Only a few additions left
	to make (namely, making the "Current Player" label accurate, coding
	the "Add" dialog boxes, and writing a configuration saver).

	Please report any bugs, with debugging output if possible (specify
	--with-debugging when running configure or autogen.sh).
	
-------------------------------------------------------------------------------
Thu Sep 16 18:31:52 PDT 1999	Michael Jennings <mej@eterm.org>

	The "Current Player" label works now.  So do computer players.  (If
	you specify a player as "AI" or "computer" in the config file, the
	program will eliminate a restaurant at random each time that player's
	turn comes up.)
	
-------------------------------------------------------------------------------