@@ -33,7 +33,15 @@ static const char cvs_ident[] = "$Id$";
 #include "dest.h"
 #include "parse.h"
 #include "players.h"
+#include "pregame.h"
 #include "strings.h"
+
+static void save_dialog(char *msg);
+static gint close_cb(GtkWidget *button, gpointer data);
+static void save_player(player_t *player, FILE *fp);
+static void save_player_group(player_group_t *group, FILE *fp);
+static void save_dest(dest_t *dest, FILE *fp);
+static void save_dest_group(dest_group_t *group, FILE *fp);
 
 void *
 parse_player_group(char *buff, void *state) {
@@ -106,3 +114,143 @@ parse_dest_group(char *buff, void *state) {
   }
 }
 
+static void
+save_dialog(char *msg) {
+
+  GtkWidget *dialog, *align, *vbox, *button, *label;
+
+  dialog = gtk_window_new(GTK_WINDOW_TOPLEVEL);
+  gtk_window_set_title(GTK_WINDOW(dialog), "Save Status");
+  gtk_window_set_transient_for(GTK_WINDOW(dialog), GTK_WINDOW(pregame_win));
+  gtk_window_set_position(GTK_WINDOW(dialog), GTK_WIN_POS_MOUSE);
+  gtk_signal_connect(GTK_OBJECT(dialog), "destroy", GTK_SIGNAL_FUNC(close_cb), (void *) dialog);
+  gtk_signal_connect(GTK_OBJECT(dialog), "delete_event", GTK_SIGNAL_FUNC(close_cb), (void *) dialog);
+  gtk_container_set_border_width(GTK_CONTAINER(dialog), 5);
+
+  vbox = gtk_vbox_new(FALSE, 0);
+  gtk_container_add(GTK_CONTAINER(dialog), vbox);
+
+  label = gtk_label_new(msg);
+  gtk_misc_set_alignment(GTK_MISC(label), 1.0, 0.5);
+  gtk_box_pack_start(GTK_BOX(vbox), label, TRUE, FALSE, 20);
+  gtk_widget_show(label);
+
+  button = gtk_button_new_with_label("OK");
+  align = gtk_alignment_new(0.5, 0.5, 0.1, 0.0);
+  gtk_container_add(GTK_CONTAINER(align), button);
+  gtk_widget_show(button);
+  gtk_box_pack_start(GTK_BOX(vbox), align, TRUE, FALSE, 0);
+  gtk_widget_show(align);
+  gtk_signal_connect(GTK_OBJECT(button), "clicked", GTK_SIGNAL_FUNC(close_cb), (void *) dialog);
+
+  gtk_widget_show(vbox);
+  gtk_widget_show(dialog);
+
+}
+
+static gint
+close_cb(GtkWidget *button, gpointer data) {
+
+  GtkWidget *dialog;
+
+  dialog = (GtkWidget *) data;
+  gtk_widget_destroy(dialog);
+  return (TRUE);
+}
+
+static void
+save_player(player_t *player, FILE *fp) {
+
+  ASSERT(player != NULL);
+  ASSERT(fp != NULL);
+
+  if (strpbrk(player->name, " \t\'")) {
+    fprintf(fp, "  player \"%s\" ", player->name);
+  } else {                                      
+    fprintf(fp, "  player %s ", player->name);
+  }
+  if (strpbrk(player->type, " \t\'")) {
+    fprintf(fp, "\"%s\"\n", player->type);
+  } else {                  
+    fprintf(fp, "%s\n", player->type);
+  }
+}
+
+static void
+save_player_group(player_group_t *group, FILE *fp) {
+
+  ASSERT(group != NULL);
+  ASSERT(fp != NULL);
+
+  fprintf(fp, "begin player_group\n");
+  if (strpbrk(group->name, " \t\'")) {
+    fprintf(fp, "  name \"%s\"\n", group->name);
+  } else {
+    fprintf(fp, "  name %s\n", group->name);
+  }
+  g_list_foreach(group->members, (GFunc) save_player, (gpointer) fp);
+  fprintf(fp, "end\n\n");
+
+}
+
+static void
+save_dest(dest_t *dest, FILE *fp) {
+
+  ASSERT(dest != NULL);
+  ASSERT(fp != NULL);
+
+  if (strpbrk(dest->name, " \t\'")) {
+    fprintf(fp, "  dest \"%s\"\n", dest->name);
+  } else {
+    fprintf(fp, "  dest %s\n", dest->name);
+  }
+}
+
+static void
+save_dest_group(dest_group_t *group, FILE *fp) {
+
+  ASSERT(group != NULL);
+  ASSERT(fp != NULL);
+
+  fprintf(fp, "begin dest_group\n");
+  if (strpbrk(group->name, " \t\'")) {
+    fprintf(fp, "  name \"%s\"\n", group->name);
+  } else {
+    fprintf(fp, "  name %s\n", group->name);
+  }
+  g_list_foreach(group->members, (GFunc) save_dest, (gpointer) fp);
+  fprintf(fp, "end\n\n");
+
+}
+
+unsigned char
+save_config(char *filename) {
+
+  register FILE *fp;
+  char dt_stamp[50];
+  time_t cur_time = time(NULL);
+  struct tm *cur_tm;
+
+  cur_tm = localtime(&cur_time);
+
+  if (!filename) {
+    filename = (char *) malloc(strlen(getenv("HOME")) + 15);
+    sprintf(filename, "%s/notgame.cfg", getenv("HOME"));
+  }
+
+  if ((fp = fopen(filename, "w")) == NULL) {
+    save_dialog("Unable to write configuration file.  Save failed!");
+    return (0);
+  }
+  strftime(dt_stamp, 50, "%x at %X", cur_tm);
+  fprintf(fp, "<" PACKAGE "-" VERSION ">\n");
+  fprintf(fp, "# Not Game Configuration File\n");
+  fprintf(fp, "# Automatically generated by " PACKAGE "-" VERSION " on %s\n\n", dt_stamp);
+
+  g_list_foreach(player_groups, (GFunc) save_player_group, (gpointer) fp);
+  g_list_foreach(dest_groups, (GFunc) save_dest_group, (gpointer) fp);
+
+  fclose(fp);
+  save_dialog("Configuration saved.");
+  return (1);
+}
