@@ -107,3 +107,9 @@ Thu Sep 16 18:31:52 PDT 1999	Michael Jennings <mej@eterm.org>
 	turn comes up.)
 	
 -------------------------------------------------------------------------------
+Thu Sep 16 19:30:21 PDT 1999	Michael Jennings <mej@eterm.org>
+
+	You can now save your current configuration.  This will be more useful
+	once you can actually add and delete players and destinations. :-)
+	
+-------------------------------------------------------------------------------
